# geant-argus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  build-docs.sh  cmd.sh-template  config-example.json  docker-compose.yml  manage.py  metadata.sample.json  postgres-compose.yml  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  tailwind.config.template.js  templatediff.py  tox.ini
demo/: docker-entrypoint.sh  initialize-db.py  initialize-db.sh  settings.py
demo-docker/: initialize-db.sh
demo/incidents/: bgp-alarm.json  hide-alarm.json  ix-peering.json  link-alarm-clear.json  link-several-bgp.json  major-alarm.json  medium-alarm.json  multi-alarm.json  optical-with-lags.json  short-lived-bgp.json  short-lived-critical.json  short-lived-link.json
docs/source/: architecture.rst  argus-notifier.rst  collaboration.rst  conf.py  configuration.rst  demo.rst  dependencies.rst  development.rst  django.rst  index.rst  introduction.rst  other.rst  single_sign_on.rst  user_preferences.rst
src/geant_argus/: CHANGELOG.md  auth.py  filters.py  urls.py  version.py  views.py
tailwindcss/: VERSION  argus_extras.css  extras.css  geant.base.css  get-tailwind.sh  tailwind.config.template.js
test/: conftest.py  settings.py  test_auth.py  test_bulk_actions.py  test_bulk_clear.py  test_config.py  test_expiredblacklistsreport.py  test_filter.py  test_metadata_validation.py  test_views.py
test/filter/: test_filters.py  test_views.py
test/filters/: test_blacklist.py  (+3 more)
(+232 files in other folders)
